Changes in snewton

2017-04-10
  o Initial setup of project with trial codes. No manuals